kubernetes-monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "homework.otus"
    http:
      paths:
      - path: "/(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: home-prom
            port:
              number: 9090
      - path: "/am/(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: home-am
            port:
              number: 9093
      - path: "/hw/(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: home-svc
            port:
              number: 80
